Rewrite and extend linkify
Add linking on user history (all ads, live+delayed ads, blocked+user
deleted ads); also rewrite the existing code to linkify phone number, ad
ID, machine ID to be more concise and jQueryesque.

--- a/index.html
+++ b/index.html
@@ -26,36 +26,30 @@
 		function linkify() {
 			if (location['host'] + location['pathname'] == 'cs.gumtree.com.au/searchAds.do') {
 
-				// Find the first dd sibling of each dt containing the text "Ad-Id:"
-				$('dt:contains(\'Ad-Id:\') + dd').html(
+				// Add links inside elements that do not already have links and return any elements to which links were added
+				var w = function(e) { return e.not(e.has('a')).wrapInner('<a>') };
 
-					// Set the HTML in each of said dd elements according to the following rule:
-					// If the first character of the text inside the dd is a left angle bracket, we have already added a link here, so do nothing;
-					// Otherwise, wrap the text in link tags
-					function (i, v) {
-						if (v.charAt(0) == '<') { return v; }
-						else { return '<a href=\'?formAction=submitSearch&idAndEmailField=' + v + '\' target=\'_blank\'>' + v + '</a>'; }
-					}
-				);
+				// Remove the link cursor from the user history line
+				$('.meta-user-history').css('cursor', '');
 
-				// Same logic as above, for machine ID
-				$('dt:contains(\'Machine Id:\') + dd div').html(
-					function (i, v) {
-						if (v.charAt(0) == '<') { return v; }
-						else { return '<a href=\'?formAction=submitSearch&searchRequest.dateRangeType=LAST_MONTH&machId=' + v + '\' target=\'_blank\'>' + v + '</a>'; }
-					}
-				);
+				// TODO: Break this up onto multiple lines and document more thoroughly
+				// Wrap the text of each of the spans in the user history box in link tags
+				// Apply the span class to child link tags to preserve link colour
+				// Add the link href attributes according to the class of the element and the text in the email field
+				// Add target "_blank" to force links to open in a new window
+				w($('span.meta-usrads-pstd,span.meta-usrads-ok,span.meta-usrads-bad')).find('a').addClass(function() { return $(this).parent().attr('class'); }).attr('href', function() { var p = ''; if ($(this).hasClass('meta-usrads-bad')) { p = '&searchRequest.groupedAdState=BLOCKED&searchRequest.groupedAdState=BLOCK_ADMIN_CONFIRMED&searchRequest.groupedAdState=DELETED__ADMIN_DELETED'; } else if ($(this).hasClass('meta-usrads-ok')) { p = '&searchRequest.groupedAdState=DELAYED&searchRequest.groupedAdState=ACTIVE__TNS_SCORE_FILTER&searchRequest.groupedAdState=ACTIVE__ADMIN_REVIEWED&searchRequest.groupedAdState=ACTIVE__DELAYED_TIMEOUT'; } return '?formAction=submitSearch&searchRequest.dateRangeType=NO_RANGE' + p + '&idAndEmailField=' + $(this).closest('.p-ads-dl').find('.meta-email :first-child').text(); }).attr('target', '_blank');
 
-				// Same logic as above, for phone number
-				$('dt:contains(\'Phone:\') + dd').html(
-					function (i, v) {
-						if (v.charAt(0) == '<') { return v; }
-						else { return '<a href=\'?formAction=submitSearch&searchRequest.dateRangeType=LAST_MONTH&searchRequest.keyword=' + v + '\' target=\'_blank\'>' + v + '</a>'; }
-					}
-				);
-
+				// Add some informative titles on the new links
+				$('a.meta-usrads-pstd').attr('title', 'View all ads from this user');
+				$('a.meta-usrads-ok').attr('title', 'View live and delayed ads from this user');
+				$('a.meta-usrads-bad').attr('title', 'View blocked and admin deleted ads from this user');
+				
+				// TODO: Break this up onto multiple lines and document more thoroughly
+				// Find the parent elements of the ad ID, machine ID, and phone number, wrap their contents in link tags
+				// Set the href and target attributes on all links according to what kind of link they are (TODO: document this more thoroughly)
 				// Add blocked class onto all links inside a blocked dd (preserves red highlighted on blocked machine IDs)
-				$('dd.p-ads-dd-blocked a').addClass('p-ads-dd-blocked');
+				w($('dt:contains(\'Ad-Id:\') + dd,dt:contains(\'Machine Id:\') + dd div,dt:contains(\'Phone:\') + dd')).find('a').attr('href', function() { var t = $(this).closest('dd').prev('dt').text(); var p; if (t == 'Ad-Id:') { p = '&idAndEmailField='; } else if (t == 'Machine Id:') { p = '&machId='; } else { p = '&searchRequest.keyword='; } return '?formAction=submitSearch&searchRequest.dateRangeType=LAST_MONTH' + p + $(this).text(); }).attr('target', '_blank').filter('dd.p-ads-dd-blocked a').addClass('p-ads-dd-blocked');
+
 			}
 		}
 
