--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
 			if (location['host'] + location['pathname'] == 'cs.gumtree.com.au/searchAds.do') {
 
 				// Add links inside elements that do not already have links and return any elements to which links were added
-				var w = function(e) { return e.not(e.has('a')).wrapInner('<a>') };
+				var w = function(e) { return e.filter(function() { return $(this).attr('x-wrapped') != 'true'; }).attr('x-wrapped', 'true').wrapInner('<a>') };
 
 				// Remove the link cursor from the user history line
-				$('.meta-user-history').css('cursor', '');
+				$('dd.meta-user-history').css('cursor', '');
 
 				// TODO: Break this up onto multiple lines and document more thoroughly
 				// Wrap the text of each of the spans in the user history box in link tags
 				// Apply the span class to child link tags to preserve link colour
 				// Add the link href attributes according to the class of the element and the text in the email field
 				// Add target "_blank" to force links to open in a new window
-				w($('span.meta-usrads-pstd,span.meta-usrads-ok,span.meta-usrads-bad')).find('a').addClass(function() { return $(this).parent().attr('class'); }).attr('href', function() { var p = ''; if ($(this).hasClass('meta-usrads-bad')) { p = '&searchRequest.groupedAdState=BLOCKED&searchRequest.groupedAdState=BLOCK_ADMIN_CONFIRMED&searchRequest.groupedAdState=DELETED__ADMIN_DELETED'; } else if ($(this).hasClass('meta-usrads-ok')) { p = '&searchRequest.groupedAdState=DELAYED&searchRequest.groupedAdState=ACTIVE__TNS_SCORE_FILTER&searchRequest.groupedAdState=ACTIVE__ADMIN_REVIEWED&searchRequest.groupedAdState=ACTIVE__DELAYED_TIMEOUT'; } return '?formAction=submitSearch&searchRequest.dateRangeType=NO_RANGE' + p + '&idAndEmailField=' + $(this).closest('.p-ads-dl').find('.meta-email :first-child').text(); }).attr('target', '_blank');
+				w($('span.meta-usrads-pstd,span.meta-usrads-ok,span.meta-usrads-bad')).find('a').addClass(function() { return $(this).parent().attr('class'); }).attr('href', function() { var p = ''; if ($(this).hasClass('meta-usrads-bad')) { p = '&searchRequest.groupedAdState=BLOCKED&searchRequest.groupedAdState=BLOCK_ADMIN_CONFIRMED&searchRequest.groupedAdState=DELETED__ADMIN_DELETED'; } else if ($(this).hasClass('meta-usrads-ok')) { p = '&searchRequest.groupedAdState=DELAYED&searchRequest.groupedAdState=ACTIVE__TNS_SCORE_FILTER&searchRequest.groupedAdState=ACTIVE__ADMIN_REVIEWED&searchRequest.groupedAdState=ACTIVE__DELAYED_TIMEOUT'; } return '?formAction=submitSearch&searchRequest.dateRangeType=NO_RANGE' + p + '&idAndEmailField=' + $(this).closest('dl.p-ads-dl').find('dd.meta-email :first-child').text(); }).attr('target', '_blank');
 
 				// Add some informative titles on the new links
 				$('a.meta-usrads-pstd').attr('title', 'View all ads from this user');
@@ -59,37 +59,40 @@
 
 				// Find all adRow tr elements that have a child element of class "meta-usrads-pstd" in which the text is precisely "1"
 				// To those matching tr elements, apply a blue background colour (these are our first-time posters)
-				$('tr.adRow').has($('.meta-usrads-pstd').filter(function() { return $(this).text() == '1'; })).css('background-color', '#E3EDFA');
+				$('tr.adRow').has($('span.meta-usrads-pstd').filter(function() { return $(this).text() == '1'; })).css('background-color', '#E3EDFA');
 
 				// Highlight all scores in red, unless they're 0, in which case make them green
-				$('dd.meta-scr').css('padding', '1px').css('background-color', '#FCB').filter(function() { return $(this).text().trim() == '0'; }).css('background-color', '#CEB');
+				$('dd.meta-scr').css('padding', '1px 2px').css('background-color', '#FCB').filter(function() { return $(this).text().trim() == '0'; }).css('background-color', '#CEB');
 
 				// Highlight live (tested) ad status in green
-				$('.meta-status:contains(\'Live \(Tested\)\')').css('background-color', '#CEB');
+				$('dd.meta-status:contains(\'Live \(Tested\)\')').css('padding', '1px 2px').css('background-color', '#CEB');
 
 				// Highlight, live (untested), blocked, and deleted ad status in red
-				$('.meta-status:contains(\'Live \(Untested\)\'),.meta-status:contains(\'Blocked\'),.meta-status:contains(\'Deleted \(Admin\)\')').css('background-color', '#FCB');
+				$('dd.meta-status:contains(\'Live \(Untested\)\'),dd.meta-status:contains(\'Blocked\'),dd.meta-status:contains(\'Deleted \(Admin\)\')').css('padding', '1px 2px').css('background-color', '#FCB');
 
 				// Make phone numbers green
-				$('dt:contains(\'Phone:\') + dd').css('background-color', '#CEB');
+				$('dt:contains(\'Phone:\') + dd').css('padding', '1px 2px').css('background-color', '#CEB');
 						
 				// Give active, registered users a green background colour and everyone else red
-				$('dd.meta-user-status').css('background-color', '#FCB').filter('dd.meta-user-status:contains(\'Active \(User\), Registered\')').css('background-color', '#CEB');
+				$('dd.meta-user-status').css('padding', '1px 2px').css('background-color', '#FCB').filter('dd.meta-user-status:contains(\'Active \(User\), Registered\')').css('background-color', '#CEB');
 
 				// Change background colour of email address matching regex r to colour c
-				var f = function(r, c) { $('.meta-email :first-child').filter(function() { return r.test( $(this).text() ); }).css('padding', '1px').css('background-color', c) };
+				var f = function(r, c) { $('dd.meta-email :first-child').filter(function() { return r.test( $(this).text() ); }).css('padding', '1px 2px').css('background-color', c) };
 
 				// Highlight freemail domains in red
 				f(/@(aol\.|gmx\.|g?(oogle)?mail\.com|hotmail\.|msn\.com|naver\.com|qq\.com|(windows)?live\.|y7?mail\.com|yahoo\.)/i, '#FCB');
 
-				// Highlight ISP domains in green
-				f(/@(.+\.edu.au|aapt\.net\.au|bigpond\.(com|net)(\.au)?|dodo\.com\.au|iinet\.net\.au|intas\.net\.au|internode\.on\.net|iprimus\.com\.au|netspace\.net\.au|optusnet\.com\.au|ozemail\.com\.au|tadaust\.org\.au|tpg\.com\.au|uplink.net.au|virginbroadband.com.au|westnet\.com\.au)$/i, '#CEB');
+				// Highlight ISP email domains in green
+				f(/@(.+\.edu\.au|aapt\.net\.au|bigpond\.(com|net)(\.au)?|dodo\.com\.au|iinet\.net\.au|intas\.net\.au|internode\.on\.net|iprimus\.com\.au|netspace\.net\.au|optusnet\.com\.au|ozemail\.com\.au|tadaust\.org\.au|tpg\.com\.au|uplink\.net\.au|virginbroadband\.com\.au|westnet\.com\.au)$/i, '#CEB');
 
 				// Highlight users with at least one ok ad in green
-				$('dd.meta-user-history').has($('.meta-usrads-ok').filter(function() { return $(this).text() != '0'; })).css('padding', '1px').css('background-color', '#CEB');
+				$('dd.meta-user-history').has($('span.meta-usrads-ok').filter(function() { return $(this).text() != '0'; })).css('padding', '1px 2px').css('background-color', '#CEB');
 
 				// Highlight users with at least one bad ad in red
-				$('dd.meta-user-history').has($('.meta-usrads-bad').filter(function() { return $(this).text() != '0'; })).css('padding', '1px').css('background-color', '#FCB');
+				$('dd.meta-user-history').has($('span.meta-usrads-bad').filter(function() { return $(this).text() != '0'; })).css('padding', '1px 2px').css('background-color', '#FCB');
+
+				// Highlight users with at least one note in red
+				$('a.actn-ntpd').filter(function() { return $(this).next('span').text() != '0' || $(this).next('span').next('span').text() != '0'; }).css('padding', '1px 2px').css('background-color', '#FCB');
 
 			}
 		}
